update: fix background brightness

--- a/phoenix/phoenix.html
+++ b/phoenix/phoenix.html
@@ -32,7 +32,7 @@
     <section class="countdown">
         <div class="teams"> 
             <div class="team">
-                <img src="..//assets/OIP.jpeg" alt="">
+                <img src="../assets/OIP.jpeg" alt="">
                 <span>PHOENIX</span>
             </div>
             <span>vs</span>
