update: more details

--- a/phoenix/phoenix.html
+++ b/phoenix/phoenix.html
@@ -6,20 +6,22 @@
 </head>
 <body>
     <header class="hero-box">
-        <nav class="navbar">
-        <div class="logo">
-            <img src="../assets/OIP.jpeg" alt="">
-            <span>PHOENIX</span>
+        <div class="navbar-wrapper">
+            <div class="navbar-logo">
+                <img src="../assets/OIP.jpeg" alt="Phoenix Logo">
+                <span>PHOENIX</span>
+            </div>
+            <nav class="navbar">
+                <ul class="nav-links">
+                    <li><a href="#">Home</a></li>
+                    <li><a href="#">About</a></li>
+                    <li><a href="#">Games</a></li>
+                    <li><a href="#">Blog</a></li>
+                    <li><a href="#">Contact</a></li>
+                    <li><a class="btn buy" href="#">Buy Ticket</a></li>
+                </ul>
+            </nav>
         </div>
-        <ul class="nav-links">
-            <li><a href="#/home">Home</a></li>
-            <li><a href="#/about">About</a></li>
-            <li><a href="#/games">Games</a></li>
-            <li><a href="#/blog">Blog</a></li>
-            <li><a href="#/contact">Contact</a></li>
-            <li><a class="btn buy" href="#/buy+ticket">Buy Ticket</a></li>
-        </ul>
-        </nav>
         <div class="hero-content">
             <h1>FIELDRUN<br>BASEBALL CLUB</h1>    
             <p>A small river named Duden flows by their place and supplies it with the necessary regalia.</p>
